fix: market comparison layout on small screens

--- a/src/css/csfloat_styles.css
+++ b/src/css/csfloat_styles.css
@@ -221,3 +221,19 @@ button.betterfloat-top-button:hover {
 .bf-tooltip:hover .bf-badge-text {
 	transform: scale(1.8);
 }
+
+#bf-popup-item-container {
+	grid-template-columns: 250px 1fr 210px 210px;
+}
+
+@media (min-width: 768px) and (max-width: 1050px) {
+	#bf-popup-item-container {
+		grid-template-columns: 250px 1fr 210px;
+	}
+}
+
+@media (max-width: 768px) {
+	#bf-popup-item-container {
+		grid-template-columns: 1fr 210px;
+	}
+}
